<resources>
    <string name="app_name">Inspector</string>
    <string name="app_name_full">Element Inspector</string>

    <string name="hint_search">Enter url or request</string>
    <string name="hint_write_js">Write js source</string>
    <string name="hint_find_to_page">Enter text</string>

    <string name="loading_page">Loading</string>
    <string name="belarus">Belarus - 2020</string>

    <string name="action_console">Console</string>
    <string name="action_contenteditable">Content editable</string>
    <string name="action_highlight_border">Highlight border</string>
    <string name="action_source_page">Source page</string>
    <string name="action_desktop_version">Desktop version</string>
    <string name="action_settings">Settings</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_help">Help</string>
    <string name="action_feedback_and_help">Help &amp; Feedback</string>
    <string name="action_exit">Exit</string>
    <string name="action_about">About</string>
    <string name="action_what_app">What it application</string>
    <string name="action_debug_mode">Debug mode</string>
    <string name="action_remove_ads_btn">Subscribe %1$s</string>
    <string name="action_restore_subscribe">Restore subscribe</string>
    <string name="action_pause_subscribe">Pause subscribe</string>
    <string name="action_additions">Additions</string>
    <string name="action_clear_back_history">Clear history</string>
    <string name="action_for_developer">For developers</string>
    <string name="action_find_to_page">Find to page</string>
    <string name="action_history">History</string>

    <string name="message_console">Use the console to view site errors and execute some commands, to successfully work with the console, you need at least an initial level of knowledge in javascript</string>
    <string name="message_contenteditable">Edit the site content, more precisely its image text without programming knowledge in the web environment</string>
    <string name="message_source_page">View, edit the source code of any page on the site</string>
    <string name="message_highlight_border">Highlighting the borders of all elements on the page, now you can find out which element and where it ends!</string>
    <string name="message_what_app">This application was created for editing site pages on the user side, you can not harm the site itself in any way, this application was created exclusively from the entertainment side. You can change the site or change its operation useing the editing page of the site or using commands through the console</string>
    <string name="message_debug_mode">How to work with Debug mode? First, go to the application settings and enable this function, then restart the application, open a browser on your computer, enter chrome://inspect/#devices or chrome://tracing in the address bar. For this function, you need to enable USB debugging</string>
    <string name="message_remove_ads">When you buy a subscription, you turn off all ads in the application. Please note that the subscription renews automatically every month. Subscription has no trial period!</string>
    <string name="message_geolocation">Are you sure you want to share %1$s with your location?</string>

    <string name="title_back_history">Your history</string>
    <string name="title_settings">Settings</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_help">Help</string>
    <string name="title_about">About</string>
    <string name="title_about_app">About application</string>
    <string name="title_remove_ads">Remove ads</string>
    <string name="title_remove_ads_sub">Renewal every month</string>
    <string name="title_geolocation">Geolocation</string>
    <string name="title_tabs">Tabs</string>

    <string name="toast_billing_disconnect">Billing disconnect</string>
    <string name="toast_billing_success">You subscribed!</string>
    <string name="toast_billing_error">Billing error</string>
    <string name="toast_allow_permission_false">Please open permission %1$s</string>

    <string name="no_logs_console">No log\'s</string>
    <string name="close_console">Close console</string>
    <string name="run_console">Run</string>
    <string name="open_console_script_execute">Open console</string>
    <string name="send_feedback">Send</string>

    <string name="connect_https">Connection protected</string>
    <string name="connect_http">Connection is not secure</string>

    <string name="feedback_message">Your message</string>
    <string name="feedback_email">Your email</string>
    <string name="feedback_message_error">Message is too short</string>
    <string name="feedback_email_invalid">Email invalid</string>
    <string name="feedback_error_send">No email client installed.</string>
    <string name="feedback_choose_email_client">Choose email client</string>

    <string name="tooltip_console_clear">Clear console</string>
    <string name="tooltip_console_refresh">Refresh list console</string>
    <string name="tooltip_open_console_script_execute">Open console after script execution</string>
    <string name="tooltip_refresh_page">Refresh</string>
    <string name="tooltip_back_page">Back</string>
    <string name="tooltip_forward_page">Forward</string>
    <string name="tooltip_back_find">Back</string>
    <string name="tooltip_next_find">Next</string>
    <string name="tooltip_close_find">Close</string>

    <string name="preference_app">Application</string>
    <string name="preference_other">Other</string>
    <string name="preference_view">View</string>

    <string name="preference_debug_mode">Debug mode</string>
    <string name="preference_app_about">About application</string>
    <string name="preference_remove_ads">Remove ads</string>
    <string name="preference_view_bottom_bar">Bottom menu bar</string>
    <string name="preference_view_buttons_bottom_bar">View buttons in bottom menu</string>
    <string name="preference_link_text">Visible bottom text with link</string>
    <string name="preference_rounded_display">Rounded display corners</string>

    <string name="about_name_alexander_mikhno">Alexander Mikhno</string>

    <string name="about_work_developer">Developer</string>
</resources>
