<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:key="categoryApp" android:title="@string/preference_app">
        <SwitchPreference
            android:defaultValue="false"
            android:key="keyDebugMode"
            android:title="@string/preference_debug_mode" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_view">
        <SwitchPreference
            android:defaultValue="false"
            android:key="keyViewBottomMenuBar"
            android:title="@string/preference_view_bottom_bar"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="keyViewBottomMenuBarButtons"
            android:title="@string/preference_view_buttons_bottom_bar"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="keyLinkText"
            android:title="@string/preference_link_text"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="keyRoundedDisplay"
            android:title="@string/preference_rounded_display"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_other">
        <PreferenceScreen
            android:key="keyRemoveAds"
            android:title="@string/preference_remove_ads"/>
        <PreferenceScreen
            android:key="keyAboutApp"
            android:title="@string/preference_app_about"/>
    </PreferenceCategory>

</PreferenceScreen>