<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:background="@android:color/transparent"
            android:textColor="@color/title_remove"
            android:text="@string/title_remove_ads"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/ds_font_semibold"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:textColor="@color/message_remove"
            android:text="@string/message_remove_ads"
            android:gravity="center"
            android:textStyle="normal"/>

        <ImageView
            android:layout_width="6dp"
            android:layout_height="6dp"
            android:layout_margin="10dp"
            android:tint="@color/tint_divider_round"
            android:src="@drawable/ic_divider_round_24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@android:color/transparent"
            android:textColor="@color/message_remove"
            android:text="@string/title_remove_ads_sub"
            android:gravity="center"
            android:textStyle="normal"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textRestorePause"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_restore_subscribe"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        android:padding="12dp"
        android:fontFamily="@font/ds_font_medium"
        android:gravity="center"
        android:foreground="?selectableItemBackground"/>

    <Button
        android:id="@+id/btnBuySub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="0dp"
        android:text="@string/action_remove_ads_btn"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:foreground="?selectableItemBackground"
        android:background="@color/colorAccent"
        app:background="@color/colorAccent"/>

</LinearLayout>