<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textLongMessage|textMultiLine"
                    android:maxHeight="220dp"
                    android:textSize="14sp"
                    android:hint="@string/feedback_message" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"
                    android:hint="@string/feedback_email" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical|right"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/buttonHelp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_help"
                    android:backgroundTint="@color/colorAccent"
                    app:backgroundTint="@color/colorAccent"
                    android:stateListAnimator="@null"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_gravity="right" />

                <Button
                    android:id="@+id/buttonSendFeedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_feedback"
                    android:backgroundTint="@color/colorAccent"
                    app:backgroundTint="@color/colorAccent"
                    android:stateListAnimator="@null"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:layout_gravity="right"
                    android:layout_margin="15dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>